implemented easy and medium

--- a/index.html
+++ b/index.html
@@ -14,12 +14,8 @@
   </head>
   <body>
     <div class="menu">
-      <div class="menuButton" data-size="4x4"></div>
-      <div class="menuButton" data-size="5x5"></div>
-      <div class="menuButton" data-size="6x6"></div>
-      <div class="menuButton" data-size="7x7"></div>
-      <div class="menuButton" data-size="8x8"></div>
-      <div class="menuButton" data-size="9x9"></div>
+      <div class="menuButton" data-size="8x10x10" name="Easy"></div>
+      <div class="menuButton" data-size="14x18x40" name="Medium"></div>
     </div>
     <div class="gridwrapper">
       <div class="grid"></div>
