--- a/index.html
+++ b/index.html
@@ -16,6 +16,8 @@
     <div class="menu">
       <div class="menuButton" data-size="8x10x10" name="Easy"></div>
       <div class="menuButton" data-size="14x18x40" name="Medium"></div>
+      <div class="flagCount"></div>
+      <div class="timer"></div>
     </div>
     <div class="gridwrapper">
       <div class="grid"></div>
