--- a/index.html
+++ b/index.html
@@ -16,8 +16,16 @@
     <div class="menu">
       <div class="menuButton" data-size="8x10x10" name="Easy"></div>
       <div class="menuButton" data-size="14x18x40" name="Medium"></div>
-      <div class="flagCount"></div>
-      <div class="timer"></div>
+      <div class="flagarea">
+        <img class="menuimage" src="images/flag_icon.png">
+        <div class="flagCount"></div>
+
+      </div>
+      
+      <div class="timerarea">
+        <img class="menuimage" src="images/clock_icon.png">
+        <div id="timer"></div>
+      </div>
     </div>
     <div class="gridwrapper">
       <div class="grid"></div>
