--- a/index.html
+++ b/index.html
@@ -1,3 +1,7 @@
+<!--
+//Some of this code camr from came from  https://gitlab.com/seng513/lights-out-game
+// The author:Pavol Federl
+-->
 <!DOCTYPE html>
 <html>
   <head>
@@ -5,12 +9,6 @@
     <meta name="viewport" content="width=device-width" />
     <title>MineSweeper</title>
     <link href="style.css" rel="stylesheet" type="text/css" />
-    <link
-      rel="stylesheet"
-      href="http://code.jquery.com/mobile/1.4.5/jquery.mobile-1.4.5.min.css"
-    />
-    <script src="http://code.jquery.com/jquery-1.11.1.min.js"></script>
-    <script src="http://code.jquery.com/mobile/1.4.5/jquery.mobile-1.4.5.min.js"></script>
   </head>
   <body>
     <div class="menu">
